--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,107 @@
+html {
+    background-color: rgb(30, 105, 107);
+}
+
 .banner_topo {
     width: 100%;
-    height: 300px;
-    background-color: rgb(15, 122, 96);
+    padding: 1%;
+    height: 70px;
+    color: white;
+    background-color: rgb(29, 29, 29);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
+}
+
+#titulo {
+    left: 2%;
+    top: -10px;
+    font-size: 40px;
+    position: absolute;
+    pointer-events: none;
+    animation: mostra_bloco .5s;
+    text-shadow: 1px 2px 1px black;
+}
+
+hr#hr_login {
+    width: 30%;
+    animation: encolhe_hr 1s;
+}
+
+#perfil_sm {
+    top: 1%;
+    right: 3%;
+    z-index: 3;
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    border-radius: 50%;
+    border: solid 3px white;
+    transition: transform .2s, box-shadow .2s;
+}
+
+.configura_perfil {
+    margin: 2%;
+    color: black;
+    transition: all .2s;
+    background-color: rgb(231, 231, 231);
+}
+
+.configura_perfil:hover {
+    color: black !important;
+    background-color: rgb(167, 167, 167);
+}
+
+#perfil_sm:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px white;
+}
+
+#formulario_login {
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    /* display: none; */
+    position: fixed;
+    padding-top: 6%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, .5);
+}
+
+.logah {
+    margin-top: 4%;
+}
+
+.buttons_login {
+    width: 20%;
+    margin-left: 40%;
+}
+
+#nav_links>h2 {
+    float: left;
+    margin-top: 0px;
+    margin-left: 20px;
+}
+
+h2>a {
+    color: white;
+    transition: .2s;
+}
+
+h2>a:hover {
+    color: gray;
+    text-decoration: none;
+}
+
+#quadro_pag {
+    width: 50%;
+    margin: 2%;
+    padding: 2%;
+    float: left;
+    height: 250px;
+    font-size: 18px;
+    border-radius: 25px;
+    background-color: rgb(255, 255, 255);
+}
+
+.sombra_quadro {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
