--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 html {
     overflow-x: hidden;
     background-color: rgb(30, 105, 107);
+    transition: all .2s;
 }
 
-.banner_topo {
+#banner_topo {
     width: 100%;
     padding: 1%;
     height: 70px;
@@ -28,12 +29,11 @@ hr#hr_login {
 }
 
 #perfil_sm {
-    top: 1%;
-    right: 3%;
     z-index: 3;
     width: 50px;
     height: 50px;
-    position: absolute;
+    float: right;
+    margin-top: -10px;
     border-radius: 50%;
     border: solid 3px white;
     transition: transform .2s, box-shadow .2s;
@@ -113,12 +113,14 @@ h1>a:hover {
 #buttons_navegacao {
     width: 90%;
     float: left;
-    height: 100px;
+    height: 70px;
+    display: grid;
     margin-top: 2%;
     margin-left: 5%;
     margin-right: 5%;
     border-radius: 15px;
     background-color: rgb(192, 192, 192);
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
 #quadro_fundo {
@@ -128,6 +130,7 @@ h1>a:hover {
     float: left;
     margin-left: 0px;
     min-height: 500px;
+    transition: all .2s;
     background-color: white;
 }
 
@@ -135,7 +138,7 @@ h1>a:hover {
     margin-bottom: 2%;
 }
 
-.categoria_item>.item,
+.categoria_item>.item_card,
 .cabecalho_infos {
     height: auto;
     display: grid;
@@ -152,7 +155,7 @@ h1>a:hover {
     border: 2px solid gainsboro;
 }
 
-.item>p {
+.item_card>p {
     display: flex;
     font-size: 20px;
     align-items: center;
@@ -215,7 +218,11 @@ a.button_add_pedido:active {
 }
 
 .preto {
-    color: white;
+    color: white !important;
+}
+
+.preto:hover {
+    background-color: grey !important;
 }
 
 .cinza {
@@ -224,4 +231,25 @@ a.button_add_pedido:active {
 
 .cinza:hover {
     background-color: rgb(202, 202, 202) !important;
+}
+
+.button_filtro {
+    margin: 2%;
+    border: 1px solid;
+    transition: all .2s;
+    font-size: 22px !important;
+}
+
+.button_filtro:focus {
+    background-color: gainsboro;
+}
+
+.sticky {
+    top: 0;
+    width: 100%;
+    position: fixed;
+}
+
+.sticky+.content {
+    padding-top: 102px;
 }
