--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html {
     padding: 1%;
     height: 70px;
     color: white;
+    position: fixed;
     background-color: rgb(29, 29, 29);
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
 }
@@ -99,14 +100,14 @@ h1>a:hover {
     text-decoration: none;
 }
 
-#quadro_pag {
-    width: 50%;
+.quadro_pag {
     margin: 2%;
+    width: 100%;
     padding: 2%;
     float: left;
     height: 250px;
     font-size: 18px;
-    border-radius: 25px;
+    border-radius: 10px;
     background-color: rgb(255, 255, 255);
 }
 
@@ -114,17 +115,34 @@ h1>a:hover {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 
-#buttons_navegacao {
+#buttons_navegacao,
+#buttons_navegacao_index,
+#buttons_navegacao_pedidos {
     width: 90%;
     float: left;
     height: 70px;
     display: grid;
-    margin-top: 2%;
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 100px;
     border-radius: 15px;
     background-color: rgb(192, 192, 192);
     grid-template-columns: 20% 20% 20% 20% 20%;
+}
+
+#conteudo_pag {
+    z-index: -2;
+    position: relative;
+}
+
+#buttons_navegacao_pedidos {
+    grid-template-columns: 25% 25% 25% 25%;
+}
+
+#buttons_navegacao_index {
+    width: 90%;
+    column-gap: 5%;
+    grid-template-columns: 46.5% 46.5%;
 }
 
 #quadro_fundo {
@@ -245,7 +263,11 @@ a.button_add_pedido:active {
 }
 
 .button_filtro:focus {
-    background-color: gainsboro;
+    background-color: rgb(78, 78, 78);
+}
+
+.button_filtro:hover {
+    background-color: rgb(170, 170, 170);
 }
 
 .sticky {
@@ -274,4 +296,8 @@ a.button_add_pedido:active {
 #float_menu>a {
     text-decoration: none;
     color: white !important;
+}
+
+.large_button {
+    height: 100px;
 }
