--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html {
     overflow-x: hidden;
-    background-color: rgb(30, 105, 107);
+    background-color: rgb(24, 83, 85);
     transition: all .2s;
 }
 
@@ -118,7 +118,8 @@ h1>a:hover {
 
 #buttons_navegacao,
 #buttons_navegacao_index,
-#buttons_navegacao_pedidos {
+#buttons_navegacao_pedidos,
+#buttons_navegacao_aprovacao {
     width: 90%;
     float: left;
     height: 70px;
@@ -127,8 +128,10 @@ h1>a:hover {
     margin-right: 5%;
     margin-top: 100px;
     border-radius: 15px;
+    background-size: 30px 30px;
     background-color: rgb(192, 192, 192);
     grid-template-columns: 20% 20% 20% 20% 20%;
+    background-image: radial-gradient(circle, rgba(83, 83, 83, .5) 1px, rgba(0, 0, 0, 0) 1px);
 }
 
 #conteudo_pag {
@@ -144,6 +147,24 @@ h1>a:hover {
     width: 90%;
     column-gap: 5%;
     grid-template-columns: 46.5% 46.5%;
+}
+
+#buttons_navegacao_aprovacao {
+    grid-template-columns: 96.2%;
+}
+
+#caixa_entrada {
+    right: 100px;
+    font-size: 20px;
+    position: absolute;
+}
+
+.icon_cinza {
+    color: gray;
+}
+
+.icon_amarelo {
+    color: yellow;
 }
 
 #quadro_fundo {
