--- a/css/style.css
+++ b/css/style.css
@@ -393,9 +393,11 @@ button {
     width: 100%;
 }
 
-.item_fornecedor {
+.item_fornecedor,
+.item_departamento {
     width: 100%;
     margin-bottom: 5px;
+    padding-bottom: 5px;
     border-bottom: 1px solid gainsboro;
 }
 
@@ -410,11 +412,15 @@ button {
     display: none;
 }
 
-.id_label {
+.label {
     color: white;
     border-radius: 5px;
     padding: 2px 15px 2px 15px;
     background-color: rgb(66, 66, 66);
+}
+
+.espacador_label {
+    margin-right: 5px;
 }
 
 .invisible {
@@ -447,4 +453,36 @@ button {
 
 .cadastro_popup>#cadastro_fornecedor>input {
     color: black !important;
+}
+
+.verde {
+    background-color: rgb(149, 206, 56);
+}
+
+.lista_grid {
+    display: grid;
+    column-gap: 1%;
+    grid-template-columns: 15% 15% 15% 15% 15% 15%;
+}
+
+.item_departamento {
+    padding: 2%;
+    height: 80px;
+    overflow: hidden;
+    border-radius: 5px;
+    white-space: nowrap;
+    border: solid 1px gainsboro;
+}
+
+.barra_lateral_cor_destaque {
+    width: 10px;
+    float: left;
+    height: 100%;
+    margin-right: 2%;
+    padding-left: -2%;
+}
+
+.btn_editar_dpt {
+    margin-top: -20px !important;
+    float: left;
 }
