--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,10 @@ h1>a:hover {
     color: gray;
 }
 
+.vermelho {
+    background-color: rgb(133, 0, 0) !important;
+}
+
 .icon_amarelo {
     color: yellow;
 }
@@ -455,14 +459,10 @@ button {
     color: black !important;
 }
 
-.verde {
-    background-color: rgb(149, 206, 56);
-}
-
 .lista_grid {
     display: grid;
     column-gap: 1%;
-    grid-template-columns: 15% 15% 15% 15% 15% 15%;
+    grid-template-columns: auto auto auto auto auto auto;
 }
 
 .item_departamento {
@@ -485,4 +485,24 @@ button {
 .btn_editar_dpt {
     margin-top: -20px !important;
     float: left;
+}
+
+.item_min {
+    border: 0px solid;
+}
+
+.select_destaque {
+    width: 100%;
+    padding: 2%;
+    color: white;
+    border-radius: 5px;
+    background-color: rgb(56, 56, 56);
+}
+
+.select_destaque>input {
+    color: black;
+}
+
+.largura_total {
+    width: 100% !important;
 }
