--- a/css/animations.css
+++ b/css/animations.css
@@ -19,3 +19,17 @@
         top: 6%;
     }
 }
+
+@keyframes borda_dourada {
+    0% {
+        box-shadow: 0px 0px 25px yellow;
+    }
+
+    50% {
+        box-shadow: 0px 0px 15px yellow;
+    }
+
+    100% {
+        box-shadow: 0px 0px 25px yellow;
+    }
+}
