--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,6 @@ h1>a:hover {
     margin: 2%;
     width: 100%;
     padding: 2%;
-    float: left;
-    height: 250px;
     font-size: 18px;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
@@ -147,6 +145,37 @@ h1>a:hover {
     width: 90%;
     column-gap: 5%;
     grid-template-columns: 46.5% 46.5%;
+    grid-template-areas: 'pilula_fechamento_mensal pilula_fechamento_mensal'
+        'pilula_l pilula_r'
+        'pilula_l_2 pilula_r'
+        'pilula_completa pilula_completa';
+}
+
+.pilula_l {
+    grid-area: pilula_l;
+}
+
+.pilula_l_2 {
+    grid-area: pilula_l_2;
+}
+
+.pilula_r {
+    grid-area: pilula_r;
+}
+
+.pilula_completa,
+.pilula_fechamento_mensal {
+    margin-left: 1%;
+    grid-area: pilula_completa;
+}
+
+.pilula_fechamento_mensal {
+    padding: 1%;
+    height: 60px;
+    margin-bottom: 10px;
+    border: 2px solid yellow;
+    grid-area: pilula_fechamento_mensal;
+    animation: borda_dourada 2s infinite;
 }
 
 #buttons_navegacao_aprovacao {
@@ -398,11 +427,27 @@ button {
 }
 
 .item_fornecedor,
-.item_departamento {
+.item_departamento,
+.item_selecionar_lista_pedido {
     width: 100%;
     margin-bottom: 5px;
     padding-bottom: 5px;
     border-bottom: 1px solid gainsboro;
+}
+
+.item_selecionar_lista_pedido {
+    display: grid;
+    column-gap: 10px;
+    text-align: center;
+    grid-template-columns: 20% 20% 15% 10% 20% 5% !important;
+}
+
+.item_selecionar_lista_pedido>button {
+    height: 30px;
+}
+
+.item_selecionar_lista_pedido>input {
+    height: 30px;
 }
 
 .item_fornecedor>button {
@@ -418,6 +463,7 @@ button {
 
 .label {
     color: white;
+    height: 18px;
     border-radius: 5px;
     padding: 2px 15px 2px 15px;
     background-color: rgb(66, 66, 66);
@@ -459,10 +505,21 @@ button {
     color: black !important;
 }
 
-.lista_grid {
+.lista_grid,
+.lista_grid_selecionar_item {
     display: grid;
     column-gap: 1%;
     grid-template-columns: auto auto auto auto auto auto;
+}
+
+.lista_grid_selecionar_item {
+    grid-template-columns: auto;
+
+}
+
+.btn_gerenciar_item_pedido {
+    width: 100%;
+    margin-top: 0px !important;
 }
 
 .item_departamento {
@@ -505,4 +562,36 @@ button {
 
 .largura_total {
     width: 100% !important;
+}
+
+.btn_voltar_pedidos {
+    margin-top: 2%;
+    margin-left: 5%;
+    position: absolute;
+}
+
+select {
+    width: 100%;
+    font-size: 18px;
+    border-radius: 5px;
+}
+
+fieldset {
+    padding: 2% !important;
+    border-radius: 5px !important;
+    border: 1px solid gainsboro !important;
+}
+
+.grid_empenhos {
+    display: grid;
+    column-gap: 1%;
+    grid-template-columns: 19.2% 19.2% 19.2% 19.2% 19.2%;
+}
+
+.card_empenho {
+    padding: 2%;
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    border: 1px solid gainsboro;
 }
