Códigos de compartilhamento e ajustes com empenhos e AFs

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 html {
+    /* height: 100%; */
     overflow-x: hidden;
-    background-color: rgb(24, 83, 85);
     transition: all .2s;
+    background-color: rgb(24, 83, 85);
 }
 
-#banner_topo {
+body {
+    margin-bottom: 50px;
+    min-height: 100%;
+    position: relative;
+}
+
+#banner_topo,
+footer {
+    top: 0px;
     z-index: 20;
     width: 100%;
     padding: 1%;
@@ -58,15 +67,21 @@ hr#hr_login {
     box-shadow: 0px 0px 15px white;
 }
 
-#formulario_login {
+#formulario_login,
+#formulario_login_empenho {
     z-index: 3;
     width: 100%;
     height: 100%;
-    /* display: none; */
     position: fixed;
     padding-top: 6%;
     text-align: center;
     background-color: rgba(0, 0, 0, .5);
+}
+
+#formulario_login_empenho {
+    display: none;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, .8);
 }
 
 #formularios_cad {
@@ -143,6 +158,7 @@ h1>a:hover {
 
 #buttons_navegacao_index {
     width: 90%;
+    height: auto;
     column-gap: 5%;
     grid-template-columns: 46.5% 46.5%;
     grid-template-areas: 'pilula_fechamento_mensal pilula_fechamento_mensal'
@@ -186,18 +202,6 @@ h1>a:hover {
     right: 100px;
     font-size: 20px;
     position: absolute;
-}
-
-.icon_cinza {
-    color: gray;
-}
-
-.vermelho {
-    background-color: rgb(133, 0, 0) !important;
-}
-
-.icon_amarelo {
-    color: yellow;
 }
 
 #quadro_fundo,
@@ -287,35 +291,6 @@ a.button_add_pedido:active {
     text-decoration: none;
 }
 
-.verde {
-    background-color: rgb(187, 221, 137);
-}
-
-.laranja {
-    background-color: rgb(252, 192, 83);
-}
-
-.vermelho {
-    color: white;
-    background-color: rgb(202, 97, 97);
-}
-
-.preto {
-    color: white !important;
-}
-
-.preto:hover {
-    background-color: grey !important;
-}
-
-.cinza {
-    background-color: rgb(231, 231, 231);
-}
-
-.cinza:hover {
-    background-color: rgb(202, 202, 202) !important;
-}
-
 .button_filtro {
     margin: 2%;
     border: 1px solid;
@@ -383,6 +358,11 @@ a.button_add_pedido:active {
 
 .detalhes_fornecedor {
     padding: 3%;
+    color: white;
+}
+
+#cadastro_fornecedor>input {
+    color: black !important;
 }
 
 #cadastro_fornecedor {
@@ -428,14 +408,16 @@ button {
 
 .item_fornecedor,
 .item_departamento,
-.item_selecionar_lista_pedido {
+.item_selecionar_lista_pedido,
+.item_lista_conferir_empenho {
     width: 100%;
     margin-bottom: 5px;
     padding-bottom: 5px;
     border-bottom: 1px solid gainsboro;
 }
 
-.item_selecionar_lista_pedido {
+.item_selecionar_lista_pedido,
+.item_lista_conferir_empenho {
     display: grid;
     column-gap: 10px;
     text-align: center;
@@ -448,6 +430,10 @@ button {
 
 .item_selecionar_lista_pedido>input {
     height: 30px;
+}
+
+.item_lista_conferir_empenho {
+    grid-template-columns: 24% 24% 24% 24% !important;
 }
 
 .item_fornecedor>button {
@@ -591,7 +577,84 @@ fieldset {
 .card_empenho {
     padding: 2%;
     width: 100%;
+    min-height: 270px;
     border-radius: 5px;
     margin-bottom: 15px;
     border: 1px solid gainsboro;
+}
+
+.empenho_desconhecido {
+    width: 100%;
+    color: white;
+    margin-top: 15%;
+    text-align: center;
+}
+
+#lista_itens_pedido {
+    overflow-y: auto;
+    max-height: 500px;
+}
+
+#footer {
+    left: 0px;
+    z-index: 1;
+    right: 0px;
+    width: 100%;
+    bottom: 0px;
+    float: left;
+    padding: .5%;
+    height: auto;
+    margin-top: 20px;
+    position: relative;
+    padding-right: 1%;
+}
+
+.icon_cinza {
+    color: gray;
+}
+
+.vermelho {
+    color: white;
+    background-color: rgb(133, 0, 0) !important;
+}
+
+.icon_amarelo {
+    color: yellow;
+}
+
+.laranja {
+    background-color: rgb(252, 192, 83);
+}
+
+.preto {
+    color: white !important;
+}
+
+.preto:hover {
+    background-color: grey !important;
+}
+
+.cinza {
+    background-color: rgb(231, 231, 231);
+}
+
+.cinza:hover {
+    background-color: rgb(202, 202, 202) !important;
+}
+
+.amarelo {
+    background-color: yellow;
+    color: black !important;
+}
+
+.cinza_escuro {
+    background-color: rgb(58, 58, 58) !important;
+}
+
+.verde {
+    background-color: green;
+}
+
+.azul {
+    background-color: rgb(53, 157, 218);
 }
