--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,27 @@ footer {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
 }
 
+footer {
+    background: rgba(30, 32, 36, .9);
+    /* cor escura com transparência */
+    backdrop-filter: blur(10px);
+    /* efeito de desfoque */
+    -webkit-backdrop-filter: blur(10px);
+    /* suporte para Safari */
+}
+
+#barra_funcoes {
+    z-index: 20;
+    width: 200px;
+    padding: 5px;
+    height: 100%;
+    float: left;
+    color: white;
+    position: fixed;
+    background-color: rgb(29, 29, 29);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.288);
+}
+
 #titulo {
     left: 2%;
     top: -10px;
@@ -44,10 +65,11 @@ hr#hr_login {
     width: 50px;
     height: 50px;
     float: right;
-    margin-top: -10px;
+    margin-top: 0px;
     border-radius: 50%;
     border: solid 3px white;
     transition: transform .2s, box-shadow .2s;
+    cursor: pointer;
 }
 
 .configura_perfil {
@@ -63,7 +85,7 @@ hr#hr_login {
 }
 
 #perfil_sm:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
     box-shadow: 0px 0px 15px white;
 }
 
@@ -104,6 +126,16 @@ hr#hr_login {
     margin-left: 20px;
 }
 
+#barra_funcoes>#nav_links>.opcoes_barra_funcoes>h2,
+#barra_funcoes>#nav_links>h2 {
+    font-size: 20px;
+}
+
+.opcoes_barra_funcoes {
+    float: right;
+    margin-top: 20px;
+}
+
 h2>a,
 h1>a {
     color: white;
@@ -118,9 +150,13 @@ h1>a:hover {
 
 .quadro_pag {
     margin: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
     width: 100%;
     padding: 2%;
     font-size: 18px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
 }
@@ -133,13 +169,12 @@ h1>a:hover {
 #buttons_navegacao_index,
 #buttons_navegacao_pedidos,
 #buttons_navegacao_aprovacao {
-    width: 90%;
+    width: 100%;
     float: left;
     height: 70px;
     display: grid;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: 100px;
+    margin-left: 2%;
+    margin-top: 2%;
     border-radius: 15px;
     background-size: 30px 30px;
     background-color: rgb(192, 192, 192);
@@ -150,6 +185,8 @@ h1>a:hover {
 #conteudo_pag {
     z-index: -2;
     position: relative;
+    margin-top: 0px;
+    margin-left: 200px;
 }
 
 #buttons_navegacao_pedidos {
@@ -157,7 +194,7 @@ h1>a:hover {
 }
 
 #buttons_navegacao_index {
-    width: 90%;
+    width: 96%;
     height: auto;
     column-gap: 5%;
     grid-template-columns: 46.5% 46.5%;
@@ -199,19 +236,21 @@ h1>a:hover {
 }
 
 #caixa_entrada {
-    right: 100px;
+    right: 70px;
+    top: 15px;
     font-size: 20px;
     position: absolute;
 }
 
 #quadro_fundo,
 #quadro_fundo_total {
-    margin: 2%;
-    width: 100%;
+    width: 90%;
     padding: 2%;
     float: left;
-    margin-left: 0px;
+    z-index: -2;
+    padding-top: 0%;
     min-height: 500px;
+    margin-left: 10% !important;
     transition: all .2s;
     background-color: white;
 }
@@ -239,7 +278,8 @@ h1>a:hover {
 
 .grid_unidades {
     display: grid;
-    grid-template-columns: 48% 48%;
+    column-gap: 10%;
+    grid-template-columns: 45% 45%;
 }
 
 
@@ -257,6 +297,23 @@ h1>a:hover {
 
 .titulo_item {
     font-size: 20px;
+}
+
+.bttn_ver_empenho {
+    transition: all .2s;
+}
+
+.bttn_ver_empenho:hover {
+    border: 2px solid gray;
+}
+
+.bttn_atalhos_panel {
+    margin-top: -20px;
+    margin-bottom: 15px;
+}
+
+.bttn_ver_autorizacoes_index {
+    margin-top: 15px;
 }
 
 .badge_tempo,
@@ -323,21 +380,34 @@ a.button_add_pedido:active {
 }
 
 #float_menu {
-    top: 6%;
-    right: 1%;
+    top: 0%;
+    left: 200px;
     z-index: -1;
     padding: 2%;
     display: none;
     font-size: 20px;
     position: fixed;
     text-align: center;
-    background-color: black;
+    background: rgba(30, 32, 36, .8);
+    /* cor escura com transparência */
+    backdrop-filter: blur(10px);
+    /* efeito de desfoque */
+    -webkit-backdrop-filter: blur(10px);
+    /* suporte para Safari */
     animation: puxa_float_menu .4s;
+    border-bottom-right-radius: 15px;
 }
 
 #float_menu>a {
+    font-size: 15px;
     text-decoration: none;
     color: white !important;
+}
+
+#float_menu>hr {
+    margin-bottom: 10px !important;
+    margin-top: 10px !important;
+    color: gray !important;
 }
 
 .large_button {
@@ -363,7 +433,7 @@ a.button_add_pedido:active {
 }
 
 .detalhes_fornecedor {
-    padding: 3%;
+    padding-top: 3%;
     color: white;
 }
 
@@ -386,6 +456,10 @@ button {
     border: solid 2px gainsboro;
 }
 
+button {
+    transition: all .2s;
+}
+
 .button_form_cadastro {
     width: 100%;
     color: black;
@@ -393,12 +467,28 @@ button {
     border-radius: 5px;
     border: solid 2px gainsboro;
     text-decoration: none !important;
+    transition: all .2s;
 }
 
 .button_form_cadastro:hover,
 .button_form_cadastro:active,
 .button_form_cadastro:visited {
     color: black;
+}
+
+.bttn_editar:hover {
+    background-color: rgb(145, 173, 199);
+    border: 2px solid transparent;
+}
+
+.bttn_salvar:hover {
+    background-color: rgb(154, 218, 168);
+    border: 2px solid transparent;
+}
+
+.bttn_cancelar:hover {
+    background-color: rgb(199, 145, 145);
+    border: 2px solid transparent;
 }
 
 .form_primeira_interacao {
@@ -453,6 +543,11 @@ button {
     display: none;
 }
 
+.cadastro_zerado {
+    margin-top: 100px;
+    text-align: center;
+}
+
 .label {
     color: white;
     height: 18px;
@@ -470,7 +565,6 @@ button {
 }
 
 .cadastrar_novo {
-    width: 14%;
     float: right;
     height: 40px;
 }
@@ -490,8 +584,12 @@ button {
     display: none;
     padding: 5% 30%;
     position: fixed;
-    backdrop-filter: blur(5px);
-    background-color: rgba(0, 0, 0, .7);
+    background: rgba(46, 47, 48, 0.9);
+    /* cor escura com transparência */
+    backdrop-filter: blur(30px);
+    /* efeito de desfoque */
+    -webkit-backdrop-filter: blur(30px);
+    /* suporte para Safari */
 }
 
 .cadastro_popup>#cadastro_fornecedor>input {
@@ -657,6 +755,15 @@ fieldset {
 
 .cinza_escuro {
     background-color: rgb(58, 58, 58) !important;
+}
+
+.cinza_escuro_fundo {
+    background: rgba(30, 32, 36, .8) !important;
+    /* cor escura com transparência */
+    backdrop-filter: blur(10px) !important;
+    /* efeito de desfoque */
+    -webkit-backdrop-filter: blur(10px) !important;
+    /* suporte para Safari */
 }
 
 .verde {
