--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h1>a:hover {
 #buttons_navegacao_index,
 #buttons_navegacao_pedidos,
 #buttons_navegacao_aprovacao {
-    width: 100%;
+    width: 95%;
     float: left;
     height: 70px;
     display: grid;
@@ -662,6 +662,26 @@ button {
     position: absolute;
 }
 
+.cadastro_select {
+    width: 90% !important;
+}
+
+.button_cadastro_select {
+    height: 40px;
+    font-size: 18px !important;
+    float: right;
+    text-align: center;
+    vertical-align: center;
+    align-items: center;
+    font-weight: 500;
+    border-radius: 10px;
+    border: 1px solid ghostwhite;
+    border-bottom: 1px solid #e5e5e5;
+    outline: none;
+    width: 40px;
+    text-decoration: none !important;
+}
+
 select {
     width: 100%;
     font-size: 18px;
@@ -702,16 +722,14 @@ fieldset {
 }
 
 #footer {
-    left: 0px;
     z-index: 1;
     right: 0px;
     width: 100%;
-    bottom: 0px;
-    float: left;
+    bottom: 0;
+    left: 0;
     padding: .5%;
-    height: auto;
-    margin-top: 20px;
-    position: relative;
+    height: 100px;
+    position: fixed;
     padding-right: 1%;
 }
 
@@ -768,6 +786,10 @@ fieldset {
 
 .verde {
     background-color: green;
+}
+
+.verde-claro {
+    background-color: rgb(156, 221, 156);
 }
 
 .azul {
